<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rtt_dot_service</name>
  <version>0.0.1</version>
  <description >
    Orocos rtt_dot_service package

    The rtt_dot_service is an RTT service which generates a file in the <a href="http://www.graphviz.org/doc/info/lang.html"> DOT language format</a> containing an overview of your current deployment configuration. It can be visualised with any DOT visualizer to give you an overview of:
    <ul>
      <li> all components currently deployed, together with their status information </li>
      <li> all component ports (connected and unconnected), and how they are connected </li>
    </ul>

    The service takes into account all peer components of the component in which you load the service. To get an overview of your complete deployment configuration, load this service in the Deployer component. You can trigger execution manually using the generate() function, but it will execute automatically with every component update as well (don't forget to attach an activity to your Deployer component!)

    To use it, load the service in your Deployer component, e.g. in your .ops script, add:

    {{{
      import ("rtt_dot_service")
      loadService("Deployer","dot")
    }}}

    or equivalently in a .lua script:

    {{{
      depl:import ("rtt_dot_service")
      depl:loadService("Deployer","dot")
    }}}


    The service has a property, dot_file, which you can adjust to the file you like to be generated. The way components, connections and channels can be plotted can be tuned using the comp_args, conn_args and chan_args properties. Visualisation of the dot file is possible, e.g. with the ROS xdot tool:

    {{{
    rosrun xdot xdot.py orograph.dot
    }}}

    Or in Fuerte or later:

    {{{
     python $(rospack find xdot)/bin/dot_viewer.py orograph.dot
    }}}

    Colors are used to display the component's current state:
    <ul>
      <li>Init - white</li>
      <li>PreOperational - orange</li>
      <li>FatalError, Exception, RunTimeError - red</li>
      <li>Stopped - lightblue </li>
      <li>Running - green</li>
    </ul>

    More information about the DOT language is available at http://www.graphviz.org/doc/info/lang.html and http://www.graphviz.org/Documentation/dotguide.pdf

  </description>
  <maintainer email="steven.bellens@mech.kuleuven.be" >Steven Bellens</maintainer>
  <author>Steven Bellens - steven.bellens@mech.kuleuven.be</author>
  <license>LGPLv2.1 / BSD</license>
  <url>http://ros.org/wiki/rtt_dot_service</url>

  <buildtool_depend>ament_cmakec</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rtt_ros2</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
